fix: adjust spacing and size

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,7 +18,7 @@
   --x-padding: 10vw;
   --y-section-padding: 5vh;
   --heading-font-size: 1.5rem;
-  --paragraph-font-size: 1.2rem;
+  --paragraph-font-size: 1rem;
   --paragraph-opacity: 0.5;
   --button-padding: 0.8rem 1.4rem;
   --button-radius: 0.4rem;
@@ -65,9 +65,10 @@ h2 {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  width: 100%;
 }
 .section-header > p {
-  max-width: 40%;
+  max-width: 35%;
   text-align: center;
 }
 /*  */
@@ -183,7 +184,7 @@ h2 {
 }
 .features-tab-switcher-button {
   font-size: 1rem;
-  padding: 1rem;
+  padding: 1.5rem;
   border-bottom: 0.15rem solid transparent;
   opacity: 0.6;
 }
@@ -194,7 +195,7 @@ h2 {
 .features-tab-simple-bookmarking {
   display: flex;
   height: 50vh;
-  gap: 2rem;
+  gap: 5rem;
 }
 .features-tab-simple-bookmarking > * {
   width: 50%;
@@ -246,8 +247,6 @@ h2 {
 
 /* Download Extension Section */
 .section-download-extension {
-  padding-left: var(--x-padding);
-  padding-right: var(--x-padding);
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -258,6 +257,8 @@ h2 {
   align-items: center;
   gap: 2rem;
   margin: 2rem 0;
+  padding-left: var(--x-padding);
+  padding-right: var(--x-padding);
 }
 .extension-card {
   width: fit-content;
